packages/wasm/ballerina-lang-go/parser/testdata/tokens/error/project/modules/foo/foo.token
(public 6 0x00 ())
(function 8 0x00 ())
(ident, "testFunc" 8 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(error 5 0x00 ())
({ 1 0x00 ())
(return 6 0x00 ())
(ident, "errorFunc" 9 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(function 8 0x00 ())
(ident, "errorFunc" 9 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(error 5 0x00 ())
({ 1 0x00 ())
(error 5 0x00 ())
(ident, "err" 3 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(( 1 0x00 ())
(string, ""error1"" 8 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(return 6 0x00 ())
(ident, "err" 3 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(2 0 0x00 ())
